<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/StandardToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/dialings_menu"
        app:titleTextColor="@color/white" />

    <HorizontalScrollView
        android:id="@+id/filtersContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/offset_medium">

            <LinearLayout
                android:id="@+id/cityLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_round_rect"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/offset_small">

                <ImageView
                    android:id="@+id/cityMarker"
                    android:layout_width="@dimen/icon_12"
                    android:layout_height="@dimen/icon_12"
                    android:layout_marginEnd="@dimen/offset_small"
                    android:src="@drawable/baseline_circle_24"
                    android:visibility="gone"
                    app:tint="@color/red_800"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/cityText"
                    style="@style/TextView.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city" />

                <ImageView
                    android:layout_width="@dimen/icon_24"
                    android:layout_height="@dimen/icon_24"
                    android:src="@drawable/ic_round_chevron_right_24"
                    app:tint="@color/grey_600" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/typeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/offset_medium"
                android:background="@drawable/bg_round_rect"
                android:foreground="?selectableItemBackground"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/offset_small">

                <ImageView
                    android:id="@+id/typeMarker"
                    android:layout_width="@dimen/icon_12"
                    android:layout_height="@dimen/icon_12"
                    android:layout_marginEnd="@dimen/offset_small"
                    android:src="@drawable/baseline_circle_24"
                    android:visibility="gone"
                    app:tint="@color/red_800" />

                <TextView
                    android:id="@+id/typeText"
                    style="@style/TextView.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type" />

                <ImageView
                    android:layout_width="@dimen/icon_24"
                    android:layout_height="@dimen/icon_24"
                    android:src="@drawable/ic_round_chevron_right_24"
                    app:tint="@color/grey_600" />
            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_200"
        android:layout_below="@id/filtersContainer" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/basesCardsList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="3"
        tools:listitem="@layout/item_dialing" />

    <LinearLayout
        android:id="@+id/emptyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/filtersContainer"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="gone" >

        <ImageView
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_round_calendar_24"
            app:tint="@color/grey_600" />

        <TextView
            style="@style/TextView.Subtitle1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/offset_large"
            android:text="@string/no_dialings"
            android:textColor="@color/grey_600" />

    </LinearLayout>
</RelativeLayout>